# cli-excel-compare

./: .gitignore  README.md  pyproject.toml
docs/: existing_libraries_for_excel.md  install_and_run.md  structure_of_excel_xip_file.md
excelcompare/: cli.py  cli_tools.py
excelcompare/core/: excel_compare.py
excelcompare/core/controllers/: convert_for_comparison.py  informer.py
excelcompare/core/models/: convert_for_comparison.py  unpack_zip.py
excelcompare/core/utils/: pretty_print.py  unpack_zip.py
