[tool.poetry]
name = "excelcompare"
version = "0.1.1"
description = ""
authors = ["-"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
excelcompare = "excelcompare.cli:main"
